@@ -1,1 +1,8 @@
 # microstream-2021-005
+
+
+To run this example add the following params to the JVM config
+
+--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+
+Cheers Sven
